Fixing problem with clicking are too small in textbox.

--- a/styles/graphstyle.css
+++ b/styles/graphstyle.css
@@ -10,7 +10,6 @@
 }
 
 .node foreignObject {
-  pointer-events: none;
   font: 0px sans-serif;
   padding: 0px;
   color: white;
